// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stamp color blue sets text and icon color 1`] = `
<div
  className="gaLKEg"
  color="blue"
  fontSize={0}
/>
`;

exports[`Stamp color gray sets text and icon color 1`] = `
<div
  className="lccHcc"
  color="gray"
  fontSize={0}
/>
`;

exports[`Stamp color green sets text and icon color 1`] = `
<div
  className="kPLDVL"
  color="green"
  fontSize={0}
/>
`;

exports[`Stamp color orange sets text and icon color 1`] = `
<div
  className="eyjgFU"
  color="orange"
  fontSize={0}
/>
`;

exports[`Stamp color purple sets text and icon color 1`] = `
<div
  className="hpPeVv"
  color="purple"
  fontSize={0}
/>
`;

exports[`Stamp color red sets text and icon color 1`] = `
<div
  className="dBUueP"
  color="red"
  fontSize={0}
/>
`;

exports[`Stamp renders 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  min-height: 24px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 0px;
  padding-bottom: 0px;
  font-size: 12px;
  color: #687B8E;
  background-color: #f6f8fa;
}

<div
  className="c0"
  color="gray"
  fontSize={0}
/>
`;
